@@ -1,6 +1,7 @@
 launchpad-buildd (168) UNRELEASED; urgency=medium
 
   * Remove obsolete chroot-building instructions from README.
+  * Rename slave-prep to builder-prep.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Feb 2019 15:09:35 +0000
 
